fix alignment of week numbers

--- a/src/style/flatpickr_base.styl
+++ b/src/style/flatpickr_base.styl
@@ -203,6 +203,7 @@
     font-weight 300
     width 14.28571%
     height 35px
+    line-height 35px
     margin 0
     text-align center
     transition 50ms all ease-out
